--- a/components/ee/payment-endpoint/package.json
+++ b/components/ee/payment-endpoint/package.json
@@ -6,7 +6,7 @@
   "docker_name": "eu.gcr.io/gitpod-dev/gitpod-payment-endpoint",
   "dependencies": {
     "@octokit/rest": "18.5.6",
-    "@octokit/webhooks": "^7.15.0",
+    "@octokit/webhooks": "7.21.0",
     "@gitpod/gitpod-db": "0.1.5",
     "@gitpod/gitpod-protocol": "0.1.5",
     "body-parser": "^1.18.2",
